tests/errors/arg_type_mismatch.re
fn t(x: arr[int, 1]) {
    
}

fn main() {
    t(2);
}